fix: Toggle button not showing

--- a/src/styles/components/ResourceIndex.pcss
+++ b/src/styles/components/ResourceIndex.pcss
@@ -61,7 +61,7 @@
     display: flex;
     position: relative;
 
-    &.Map {
+    &.mapView {
       & .toggleList {
         display: block;
       }
